# ofiuco

./: .bazelignore  .bazelrc  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .pre-commit.yml  AUTHORS  BUILD.bazel  CHANGELOG.md  Dockerfile  MODULE.bazel  README.md  WORKSPACE  docker-compose.yml  pyproject.toml
.bcr/: config.yml  metadata.template.json  presubmit.yml  source.template.json
.github/workflows/: ci.yml  create-release.yml  release-notes.md
docs/20240718_MTZ/: index.css  index.html  index.org
examples/: BUILD  BUILD.bazel  integration_test.sh
examples/airflow/: BUILD.bazel  MODULE.bazel  README.md  pyproject.toml  test.py
examples/aspect_rules_py/: BUILD.bazel  MODULE.bazel  pyproject.toml  test.py
examples/cc_toolchain/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  pyproject.toml  test.py
examples/markers/: .bazelrc  .bazelversion  BUILD.bazel  MODULE.bazel  README.md  pyproject.toml  test.py
examples/numpy/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  nanobind.BUILD.bazel  nanobind_example.cpp  pyproject.toml  test.cpp  test_bindings.py
examples/simple/: .bazelrc  .bazelversion  BUILD.bazel  MODULE.bazel  README.md  pyproject.toml  test.py
examples/torch/: .gitignore  BUILD.bazel  MODULE.bazel  README.md  pyproject.toml  sample_flit.tar.xz  test.py
examples/torch/sample/: pyproject.toml
examples/torch/sample/sample_package/: __init__.py
examples/torch/sample_hatchling/: pyproject.toml
examples/transitions/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  app.py  cc_toolchain_config.bzl  pyproject.toml  test.py  transitions.bzl
examples/transitions/constraint/: BUILD.bazel
examples/transitions/toolchains/args/: BUILD.bazel
examples/transitions/toolchains/clang/: BUILD.bazel  clang.BUILD
examples/transitions/toolchains/clang/args/: BUILD.bazel
examples/transitions/toolchains/clang/tools/: BUILD.bazel
examples/uv/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  pyproject.toml  test.py
examples/uv/re2/: pyproject.toml
examples/uv/tools/: bazel.ps1
examples/workspace/: BUILD  README.md  WORKSPACE  pyproject.toml  test.py
examples/workspace_multi/: .bazelrc  BUILD  README.md  WORKSPACE  pyproject.toml  test.py
examples/workspace_rules_python/: BUILD  README.md  WORKSPACE  test.py
lib/: defs.bzl  globstar.bzl  py_zip.bzl  runfiles.bzl
lib/private/: BUILD  BUILD.bazel  globstar.bzl  globstar_test.bzl  paths.bzl  prefix_lookup.bzl  prefix_lookup_test.bzl  py_zip.bzl  py_zip_test.bzl  py_zip_test_binary.py  py_zip_test_grep.sh  py_zip_test_shebang.sh  py_zip_test_validator.sh  runfiles.bzl  runfiles_test.bzl  zipper.py  zipper_test.py
lib/tests/: BUILD  globstar_test.bzl  py_zip_test.bzl  py_zip_validator.sh  runfiles_test.bzl
python/: BUILD  cc_py_library.bzl  extensions.bzl  internal_deps.bzl  lock_parser.bzl  markers.bzl  poetry.bzl  poetry_deps.bzl  poetry_deps.py  poetry_parse.bzl  poetry_venv.awk  poetry_venv.bzl  py_venv.bzl  py_venv.py  repositories.bzl  uv.bzl
python/patches/: scripts_executable.patch
python/private/: BUILD.bazel  lock_parser.bzl  lock_parser.py  lock_parser_test.py  markers.bzl  markers_test.bzl  package_deps.bzl  package_deps.py  package_deps_test.bzl  package_deps_test.py  poetry_deps.bzl  poetry_deps.py  poetry_deps_test.py  poetry_parse.bzl  poetry_parse_test.bzl  poetry_venv.bzl  py_venv.py  py_venv_test.py  utils.py  uv.lock.json
python/private/assets/: pytest.html  pytest.json
python/private/assets/airflow/: pyproject.toml
python/private/assets/sphinx/: pyproject.toml
python/private/assets/torch/: pyproject.toml
python/tests/: BUILD  markers_test.bzl  poetry_deps_test.bzl  poetry_deps_test.py  poetry_parse_test.bzl  poetry_venv_test.bzl  py_venv_test.py
tests/: BUILD  markers_test.bzl
tools/: bazel  bazel.ps1  check_version.py  dependabot.py
