[tool.black]
include = "\\.pyi?$"
line-length = 120
max-complexity = 12

[tool.ruff]
line-length = 120

[tool.isort]
default_section = "FIRSTPARTY"
include_trailing_comma = true
known_first_party = []
known_third_party = [
  "boto3",
  "elftools",
  "pip",
  "pytest",
]
line_length = 120
multi_line_output = 3
no_lines_before = "LOCALFOLDER"
py_version = 311
skip = [
  "bazel-ofiuco",
  "bazel-bin",
  "bazel-out",
  "bazel-testlogs",
]

[tool.poetry]
name = "rules-poetry"
version = "0.1.0"
description = ""
authors = ["Michael Krasnyk <michael.krasnyk@gmail.com>"]
readme = "README.md"
packages = [{include = "ofiuco"}]

[tool.poetry.dependencies]
python = "^3.9"
poetry = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
