[project]
name = "ofiuco"
version = "0.5.0"
maintainers = [{name = "Michael Krasnyk", email = "michael.krasnyk@gmail.com"}]
readme = "README.md"
description = "Bazel tools for Python and package managers"
requires-python = ">=3.12,<4.0"
license = "Apache-2.0"
dependencies = [
    "poetry",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort
]

[tool.isort]
default_section = "FIRSTPARTY"
include_trailing_comma = true
known_first_party = []
known_third_party = [
  "boto3",
  "elftools",
  "pip",
  "pytest",
]
line_length = 120
multi_line_output = 3
no_lines_before = "LOCALFOLDER"
py_version = 311
skip = [
  "bazel-ofiuco",
  "bazel-bin",
  "bazel-out",
  "bazel-testlogs",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
