[project]
name = "ofiuco"
version = "0.7.1"
description = "Bazel tools for Python and package managers"
readme = "README.md"
license = "Apache-2.0"
maintainers = [ { name = "Michael Krasnyk", email = "michael.krasnyk@gmail.com" } ]
requires-python = ">=3.12,<4.0"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "poetry",
]

[tool.ruff]
line-length = 120
extend-exclude = [ "examples/airflow/re2" ]

lint.select = [
  "B",   # flake8-bugbear
  "E",   # pycodestyle
  "F",   # Pyflakes
  "I",   # isort
  "SIM", # flake8-simplify
  "UP",  # pyupgrade
]

[tool.isort]
default_section = "FIRSTPARTY"
include_trailing_comma = true
known_first_party = [  ]
known_third_party = [
  "boto3",
  "elftools",
  "pip",
  "pytest",
]
line_length = 120
multi_line_output = 3
no_lines_before = "LOCALFOLDER"
py_version = 311
skip = [
  "bazel-ofiuco",
  "bazel-bin",
  "bazel-out",
  "bazel-testlogs",
]
