load("@rules_shell//shell:sh_test.bzl", "sh_test")

tags = {
    "torch": [],
}

[sh_test(
    name = "{}_integration_test".format(name),
    size = "large",
    srcs = ["integration_test.sh"],
    args = [name],
    data = glob(["{}/**/*".format(name)]) + [
        "//:MODULE.bazel",
        "//:WORKSPACE",
    ],
    tags = tags.get(name, []),
) for name in [
    "airflow",
    "aspect_rules_py",
    "cc_toolchain",
    "markers",
    "numpy",
    "simple",
    "torch",
    "transitions",
    "uv",
]]
