load("@ofiuco//python:poetry.bzl", "poetry_lock")
load("@ofiuco//python:py_venv.bzl", "py_venv")
load("@rules_python//python:defs.bzl", "py_test")

py_venv(
    name = "airflow",
    deps = [
        "@poetry//:apache-airflow",
    ],
)

[py_test(
    name = "test_{}".format(python_version),
    size = "large",
    srcs = ["test.py"],
    data = ["lock/poetry.lock"],
    main = "test.py",
    python_version = python_version,
    deps = [
        ":airflow",
        "@poetry//:pytest",
    ],
) for python_version in [
    "3.12",
    "3.13",
]]

poetry_lock(
    name = "lock",
    lock = "lock/poetry.lock",
    toml = "pyproject.toml",
)
