load("@ofiuco//python:py_venv.bzl", "py_venv")
load("@ofiuco//python:uv.bzl", "uv_lock")
load("@rules_python//python:defs.bzl", "py_test")

py_venv(
    name = "airflow",
    deps = [
        "@python//:apache-airflow",
    ],
)

[py_test(
    name = "test_{}".format(python_version),
    size = "large",
    srcs = ["test.py"],
    data = ["lock/uv.lock"],
    main = "test.py",
    python_version = python_version,
    deps = [
        ":airflow",
        "@python//:pytest",
        "@python//:pyyaml",
    ] + select({
        "@platforms//os:windows": [],  # skip google-re2 building on windows
        "//conditions:default": ["@python//:google-re2"],
    }),
) for python_version in [
    "3.12",
    "3.13",
    "3.14",
]]

uv_lock(
    name = "lock",
    lock = "lock/uv.lock",
    toml = "pyproject.toml",
)
