bazel_dep(name = "rules_python", version = "1.5.1")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.12")
python.toolchain(python_version = "3.13")
python.toolchain(python_version = "3.14")
use_repo(python, "python_3_12", "python_3_13", "python_3_14", "python_versions")

bazel_dep(name = "ofiuco", version = "0.0.0")
local_path_override(
    module_name = "ofiuco",
    path = "../..",
)

poetry = use_extension("@ofiuco//python:extensions.bzl", "poetry")
poetry.parse(
    name = "poetry",
    lock = "//:lock/poetry.lock",
    toml = "pyproject.toml",
    deps = {
        "google-re2": [
            "@@re2+//:re2",
            "@@abseil-cpp+//absl/strings",
            "@@pybind11_bazel++internal_configure_extension+pybind11//:pybind11",
        ],
    },
)
use_repo(poetry, "poetry")

# google-re2 cc dependencies
bazel_dep(name = "re2", version = "2025-06-26")
bazel_dep(name = "abseil-cpp", version = "20250512.1")
bazel_dep(name = "pybind11_bazel", version = "2.13.6")

pybind11_configure = use_extension("@pybind11_bazel//:internal_configure.bzl", "internal_configure_extension")
use_repo(pybind11_configure, "pybind11")
