load("@ofiuco//python:poetry.bzl", "poetry_lock")
load("@aspect_rules_py//py:defs.bzl", "py_test")

py_test(
    name = "test",
    size = "large",
    srcs = ["test.py"],
    deps = [
        "@poetry//:absl-py",
    ],
)

poetry_lock(
    name = "lock",
    lock = "poetry.lock",
    toml = "pyproject.toml",
)
