module(
    name = "poetry_demo",
    version = "0.1.0",
)

bazel_dep(name = "aspect_rules_py", version = "1.3.4")
bazel_dep(name = "rules_python", version = "1.6.3")

# Register a hermetic Python toolchain rather than rely on a locally-installed
# interpreter.
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    is_default = True,
    python_version = "3.13",
)
use_repo(python, "python_3_13")

bazel_dep(name = "ofiuco", version = "0.0.0")
local_path_override(
    module_name = "ofiuco",
    path = "../..",
)

parse = use_extension("@ofiuco//python:extensions.bzl", "parse")
parse.lock(
    name = "poetry",
    lock = "//:poetry.lock",
)
use_repo(parse, "poetry")
