load("@ofiuco//python:poetry.bzl", "poetry_lock")
load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "test",
    size = "large",
    srcs = ["test.py"],
    data = ["poetry.lock"],
    deps = [
        "@poetry//:llama-cpp-python",
        "@poetry//:psycopg",
        "@poetry//:pytest",
        "@poetry//:py-radix",
    ] + select({
        "@platforms//os:linux": ["@poetry//:evdev"],
        "//conditions:default": [],
    }),
)

poetry_lock(
    name = "lock",
    lock = "poetry.lock",
    toml = "pyproject.toml",
)
