load("@ofiuco//python:poetry.bzl", "poetry_lock")
load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "test",
    size = "large",
    srcs = ["test.py"],
    data = ["poetry.lock"],
    deps = [
        "@poetry//:psycopg",
        "@poetry//:py-radix",
        "@poetry//:pytest",
        "@poetry//:win-inet-pton",
    ] + select({
        "@platforms//os:linux": [
            "@poetry//:evdev",
            "@poetry//:llama-cpp-python",
        ],
        "@platforms//os:macos": ["@poetry//:llama-cpp-python"],
        "//conditions:default": [],
    }),
)

poetry_lock(
    name = "lock",
    lock = "poetry.lock",
    toml = "pyproject.toml",
)
