load("@rules_poetry//python:poetry.bzl", "poetry_update")

py_test(
    name = "test",
    size = "small",
    srcs = ["test.py"],
    data = ["poetry.lock"],
    deps = [
        "@python//:pytest",
    ],
)

poetry_update(
    name = "update_lock",
    lock = "poetry.lock",
    toml = "pyproject.toml",
)
