load("@ofiuco//python:poetry.bzl", "poetry_update")
load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "test",
    size = "large",
    srcs = ["test.py"],
    data = ["poetry.lock"],
    deps = [
        "@python//:all",
    ],
)

poetry_update(
    name = "update_lock",
    lock = "poetry.lock",
    toml = "pyproject.toml",
)
