load("@ofiuco//python:poetry.bzl", "poetry_lock")
load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "test",
    size = "large",
    srcs = ["test.py"],
    data = ["poetry.lock"],
    deps = [
        "@python//:all",
    ],
)

poetry_lock(
    name = "poetry",
    lock = "poetry.lock",
    toml = "pyproject.toml",
)
