load("@ofiuco//python:poetry.bzl", "poetry_update")
load("@rules_python//python:defs.bzl", "py_test")
load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "test",
    srcs = ["test.cpp"],
    deps = [
        "@poetry//:numpy",
        "@rules_python//python/cc:current_py_cc_headers",
        "@rules_python//python/cc:current_py_cc_libs",
    ],
)
poetry_update(
    name = "update_lock",
    lock = "poetry.lock",
    toml = "pyproject.toml",
)
