[project]
name = "example"
version = "0.0.0"
description = "example with numpy API calls"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11,<4"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "numpy",
  "pytest",
]
