load("@ofiuco//python:poetry.bzl", "poetry_lock")
load("@rules_python//python:defs.bzl", "py_test")
load("@rules_python//python/entry_points:py_console_script_binary.bzl", "py_console_script_binary")

py_test(
    name = "test",
    size = "large",
    srcs = ["test.py"],
    data = ["poetry.lock"],
    deps = [
        ":pre-commit",
        "@poetry//:boto3",
        "@poetry//:pytest",
    ],
)

py_console_script_binary(
    name = "pre-commit",
    entry_points_txt = "@poetry//:pre-commit",
    pkg = "@poetry//:pre-commit",
)

poetry_lock(
    name = "lock",
    lock = "poetry.lock",
    toml = "pyproject.toml",
)
