bazel_dep(name = "rules_python", version = "1.8.0-rc2")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.14")

bazel_dep(name = "ofiuco", version = "0.0.0")
local_path_override(
    module_name = "ofiuco",
    path = "../..",
)

parse = use_extension("@ofiuco//python:extensions.bzl", "parse")
parse.lock(
    name = "poetry",
    generate_extras = True,
    lock = "//:poetry.lock",
)
use_repo(parse, "poetry")
