load("@ofiuco//python:poetry.bzl", "poetry_update")
load("@ofiuco//python:py_venv.bzl", "py_venv")
load("@rules_python//python:defs.bzl", "py_test")

py_venv(
    name = "torch_venv",
    visibility = ["//visibility:public"],
    deps = [
        "@poetry//:torch",
    ],
)

py_test(
    name = "test",
    size = "large",
    srcs = ["test.py"],
    data = ["poetry.lock"],
    deps = [
        ":torch_venv",
        "@poetry//:numpy",
        "@poetry//:pytest",
    ],
)

poetry_update(
    name = "update_lock",
    lock = "poetry.lock",
    toml = "pyproject.toml",
)
