load("@ofiuco//python:poetry.bzl", "poetry_lock")
load("@ofiuco//python:py_venv.bzl", "py_venv")
load("@ofiuco//python:uv.bzl", "uv_lock")
load("@rules_python//python:defs.bzl", "py_test")

py_venv(
    name = "torch_venv",
    data = [
        "sample/pyproject.toml",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@poetry//:colorama",
        "@poetry//:torch",
        "@poetry//:torchvision",
    ],
)

py_test(
    name = "test",
    size = "large",
    srcs = ["test.py"],
    data = [
        "gen/poetry.lock",
        "sample/pyproject.toml",
    ],
    deps = [
        ":torch_venv",
        "@poetry//:numpy",
        "@poetry//:pytest",
        "@poetry//:sample-package",
        "@poetry//:sample-package-flit",
        "@poetry//:sample-package-hatchling",
    ],
)

# poetry lock && mv poetry.lock gen
poetry_lock(
    name = "lock",
    lock = "gen/poetry.lock",
    toml = "pyproject.toml",
)
